src/test/ui/parser/tag-variant-disr-non-nullary.stderr
error: discriminator values can only be used with a field-less enum
  --> $DIR/tag-variant-disr-non-nullary.rs:8:13
   |
LL |     white = 0xffffff,
   |             ^^^^^^^^

error: aborting due to previous error

